// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`WalletForm\` component should render correctly when \`error\` prop is set 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormTitle>
    Create wallet
  </FormTitle>
  <FormGroup>
    <Input
      disabled={false}
      label="Label"
      name="label"
      onChange={[MockFunction]}
      placeholder="Enter a wallet label"
      required={true}
      value="__LABEL__"
    />
  </FormGroup>
  <FormGroup>
    <Input
      disabled={false}
      label="Passphrase"
      name="passphrase"
      onChange={[MockFunction]}
      placeholder="Enter a passphrase to encrypt wallet"
      required={true}
      type="password"
      value="__PASSPHRASE__"
    />
  </FormGroup>
  <Button
    disabled={false}
    type="submit"
  >
    Create wallet
  </Button>
</Form>
`;

exports[`\`WalletForm\` component should render correctly when \`error\` prop is set and \`hasError\` prop is \`true\` 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormTitle>
    Create wallet
  </FormTitle>
  <FormGroup>
    <Input
      disabled={false}
      label="Label"
      name="label"
      onChange={[MockFunction]}
      placeholder="Enter a wallet label"
      required={true}
      value="__LABEL__"
    />
  </FormGroup>
  <FormGroup>
    <Input
      disabled={false}
      label="Passphrase"
      name="passphrase"
      onChange={[MockFunction]}
      placeholder="Enter a passphrase to encrypt wallet"
      required={true}
      type="password"
      value="__PASSPHRASE__"
    />
  </FormGroup>
  <FormError>
    __ERROR__
  </FormError>
  <Button
    disabled={false}
    type="submit"
  >
    Create wallet
  </Button>
</Form>
`;

exports[`\`WalletForm\` component should render correctly when \`hasError\` prop is \`true\` 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormTitle>
    Create wallet
  </FormTitle>
  <FormGroup>
    <Input
      disabled={false}
      label="Label"
      name="label"
      onChange={[MockFunction]}
      placeholder="Enter a wallet label"
      required={true}
      value="__LABEL__"
    />
  </FormGroup>
  <FormGroup>
    <Input
      disabled={false}
      label="Passphrase"
      name="passphrase"
      onChange={[MockFunction]}
      placeholder="Enter a passphrase to encrypt wallet"
      required={true}
      type="password"
      value="__PASSPHRASE__"
    />
  </FormGroup>
  <FormError />
  <Button
    disabled={false}
    type="submit"
  >
    Create wallet
  </Button>
</Form>
`;

exports[`\`WalletForm\` component should render correctly when \`isFormDisabled\` prop is \`true\` 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormTitle>
    Create wallet
  </FormTitle>
  <FormGroup>
    <Input
      disabled={true}
      label="Label"
      name="label"
      onChange={[MockFunction]}
      placeholder="Enter a wallet label"
      required={true}
      value="__LABEL__"
    />
  </FormGroup>
  <FormGroup>
    <Input
      disabled={true}
      label="Passphrase"
      name="passphrase"
      onChange={[MockFunction]}
      placeholder="Enter a passphrase to encrypt wallet"
      required={true}
      type="password"
      value="__PASSPHRASE__"
    />
  </FormGroup>
  <Button
    disabled={true}
    type="submit"
  >
    Create wallet
  </Button>
</Form>
`;

exports[`\`WalletForm\` component should render correctly with default props 1`] = `
<Form
  onSubmit={[MockFunction]}
>
  <FormTitle>
    Create wallet
  </FormTitle>
  <FormGroup>
    <Input
      disabled={false}
      label="Label"
      name="label"
      onChange={[MockFunction]}
      placeholder="Enter a wallet label"
      required={true}
      value="__LABEL__"
    />
  </FormGroup>
  <FormGroup>
    <Input
      disabled={false}
      label="Passphrase"
      name="passphrase"
      onChange={[MockFunction]}
      placeholder="Enter a passphrase to encrypt wallet"
      required={true}
      type="password"
      value="__PASSPHRASE__"
    />
  </FormGroup>
  <Button
    disabled={false}
    type="submit"
  >
    Create wallet
  </Button>
</Form>
`;
